cabal-version:      2.4
name:               scheme
version:            0.1.0.0

-- A short (one-line) description of the package.
-- A LISP implementation in Haskell

author:             Swarnim Walavalkar
maintainer:         swarnim.walavalkar@gmail.com

executable scheme
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, parsec, mtl
    hs-source-dirs:   app
    default-language: Haskell2010
